--- a/css/pallas45.css
+++ b/css/pallas45.css
@@ -2,6 +2,21 @@
 
 .cab-0 { height: 0px; visibility: hidden; margin: 0px; }
 
+.bot-1 {
+    cursor: pointer;
+    width: 150px;
+    height: 35px;
+    color: #ffffff;
+    font-size: 15px;
+    font-weight: bold;
+    background-color: #04d766;
+    border-radius: 0px 20px 0px 20px;
+}
+
+.cor-1 {
+    color: #ffffff !important;
+}
+
 .login {
     width: 100%;
     height: 100vh;
@@ -12,14 +27,14 @@
 }
 
 .qua-1 {
-    width: 35%;
+    width: 30%;
     height: auto;
     border-radius: 10px;
     text-align: center;
-    background-color: #f4f4f4;
     padding: 10px 15px;
     margin: 100px auto;
     animation-duration: 5s;
+    background-color: #000000;
 }
 
 @media only screen and (max-width: 900px) {  
@@ -30,14 +45,14 @@
     body { overflow-x: hidden; }
 }
 
-.bot-1 {
-    cursor: pointer;
-    width: 150px;
-    height: 35px;
-    color: #ffffff;
-    font-size: 15px;
+.tit-1 {
+    font-size: 12px;
     font-weight: bold;
-    background-color: #0E7EA7;
-    border-radius: 0px 20px 0px 20px;
+    text-decoration: none;
+}
+
+.tit-2 {
+    font-size: 11px;
+    text-decoration: none;
 }
 
