--- a/css/pallas45.css
+++ b/css/pallas45.css
@@ -26,6 +26,24 @@
     background-position: center;
 }
 
+.lit-1 {
+    color: #000000;
+    margin-top: 30px;
+    font-size: 36px;
+    font-weight: 300;
+}
+
+.lit-2 {
+    color: #000000;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.lit-3 {
+    font-size: 40px;
+    font-weight: 300;
+}
+
 .qua-1 {
     width: 30%;
     height: auto;
@@ -35,6 +53,11 @@
     margin: 100px auto;
     animation-duration: 5s;
     background-color: #000000;
+}
+
+.qua-2 {
+    color: #000000;
+    background-color: #E9E9E9;
 }
 
 @media only screen and (max-width: 900px) {  
@@ -54,5 +77,112 @@
 .tit-2 {
     font-size: 11px;
     text-decoration: none;
+}
+
+.subir {
+    position: fixed;
+    cursor: pointer;
+    bottom: 4.0%;
+    right: 0.5%;
+    display: none;
+}
+
+.men-1 ul {
+    position: relative;
+    padding: 20px;
+    width: 300px;
+    background-color: antiquewhite;
+    display: flex;
+    flex-direction: column;
+    border-radius:10px;
+    border-radius: 0 10px 30px rgba(0,0,0,0.1);
+}
+
+.men-1 ul li {
+    position: relative;
+    list-style: none;
+}
+
+.men-1 ul li::before {
+    content: '';
+    position: absolute;
+    top: 26px;
+    right: 10px;
+    width: 10px;
+    height: 10px;
+    background-color: #e0e0e0;
+    border-radius: 50%;
+    transition: 0.5s;    
+}
+
+.men-1 ul li:hover::before {
+    background-color: #00D965;
+}
+
+.men-1 ul li a {
+    text-decoration: none;
+    display: flex;
+}
+
+.men-1 ul li a .icon {
+    width: 60px;
+    height: 40px;
+    text-align: center;  /*    overflow: hidden; */
+    overflow: hidden;
+    margin: 10px;
+}
+
+.men-1 ul li a .icon .fa {
+    width: 100%;
+    height: 100%;
+    line-height: 40px;
+    font-size: 34px;
+    color: #333;
+    transition: 0.5s;
+}
+
+.men-1 ul li a .icon .fa:last-child {
+    color: #188aff;
+}
+
+.men-1 ul li a:hover .icon .fa {
+    transform: translateY(-100%);
+}
+
+.men-1 ul li a:hover .icon .fa:last-child {
+    transform: translateY(-100%);
+}
+
+.men-1 ul li a .name {
+    position: relative;
+    top: 20px;
+    height: 20px;
+    width: 100%;
+    display: block;
+    overflow: hidden ; /* */
+}
+
+.men-1 ul li a .name span {
+    display: block;
+    position: relative;
+    color: #333;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 20px;
+    transition: 0.5s;
+}
+
+.men-1 ul li a .name span::before {
+    content: attr(data-text);
+    position: absolute;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: #188aff;
+}
+
+.men-1 ul li a:hover .name span {
+    transform: translateY(20px);
 }
 
