--- a/css/pallas45.css
+++ b/css/pallas45.css
@@ -13,7 +13,23 @@
     border-radius: 0px 20px 0px 20px;
 }
 
+.bot-2 {
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+}
+
 .cor-1 {
+    color: #ffffff !important;
+}
+
+.cor-2 { color: red; }
+
+.cor-3 { background-color: red; }
+
+.cor-4 { color: blue; }
+
+.cpo-0 input[type=text], .cpo-0 input[type=email] , .cpo-0 input[type=password] {
     color: #ffffff !important;
 }
 
@@ -44,6 +60,17 @@
     font-weight: 300;
 }
 
+.lit-4 {
+    margin: 15px;
+    text-align: left;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.ima-2 {
+    animation-duration: 5s;
+}
+
 .qua-1 {
     width: 30%;
     height: auto;
@@ -60,6 +87,13 @@
     background-color: #E9E9E9;
 }
 
+.qua-3 {
+    padding: 10px 0px;
+    overflow: hidden;
+    border: 0.5px solid #04d766;
+    box-shadow: 10px 15px 5px rgba(0,0,0,.3);
+}
+
 @media only screen and (max-width: 900px) {  
     .qua-1 { width: 90%; }
 }
@@ -67,6 +101,34 @@
 @media only screen and (min-width: 900px) {  
     body { overflow-x: hidden; }
 }
+
+.tab-1 {
+    font-size: 12px;
+    padding: 0px 10px;
+}
+
+.tel-1 {
+    overflow: hidden;
+    margin: 18px 0px 0px 0px;
+    padding: 0px 5px;
+    border: 0.5px solid #04d766;
+    box-shadow: 10px 15px 5px rgba(0,0,0,.3);
+}
+
+.tel-1 label {
+    font-size: 14px;
+    color: #918e8e;
+}
+
+.tel-1 input[type=text], .tel-1 input[type=email], .tel-1 select, .tel-1 select option, .tel-1 textarea {
+    font-size: 14px;
+    padding: 2px 10px;
+    color: #676a6c;
+ }
+
+ .tel-1 input[type=text]:hover, .tel-1 input[type=email]:hover, .tel-1 select:hover, .tel-1 select option:hover, .tel-1 textarea:hover {
+    font-weight: bold;
+ }
 
 .tit-1 {
     font-size: 12px;
@@ -87,11 +149,20 @@
     display: none;
 }
 
+#particles-js {
+    width: 100%;
+    height: 100vh;
+    color: #000000;
+    background: #caf5de;
+}
+
+/* Menu vertical (lateral) com movimento */
 .men-1 ul {
     position: relative;
-    padding: 20px;
-    width: 300px;
-    background-color: antiquewhite;
+    margin: 20px 0px;
+    padding: 10px;
+    width: 250px;
+    background-color:#effcf5;
     display: flex;
     flex-direction: column;
     border-radius:10px;
