--- a/css/pallas45.css
+++ b/css/pallas45.css
@@ -258,8 +258,8 @@ button.dt-button {
 .men-1 ul {
     position: relative;
     margin: 20px 0px;
-    padding: 10px;
-    width: 250px;
+    padding: 5px;
+    width: 95%; /* 210 */
     background-color:#effcf5;
     display: flex;
     flex-direction: column;
@@ -336,7 +336,7 @@ button.dt-button {
     position: relative;
     color: #333;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 16px; /* Fonte do Menu */
     line-height: 20px;
     transition: 0.5s;
 }
